--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -4,6 +4,9 @@ button{
   font-weight: bold;
   font-size: 14px;
   line-height: 23px;
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
 }
 .button{
   display: flex;
@@ -14,6 +17,7 @@ button{
   border-radius: 90px;
   box-sizing: border-box;
   border: 2px solid #0F0A0A;
+  
 }
 
 .button-primary{
