--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,4 @@
 @import './base/global.css';
-@import './base/typography.css'
+@import './base/typography.css';
+
+@import './components/button.css'
