--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -7,6 +7,8 @@ button{
   text-align: center;
   letter-spacing: 1.25px;
   text-transform: uppercase;
+  border: none;
+  background-color: transparent;
 }
 .button{
   display: flex;
@@ -21,10 +23,10 @@ button{
 }
 
 .button-primary{
-  width: 111px;
   height: 49px;
   background-color: #42E2B8;
   box-shadow: -4px 4px 14px rgba(0, 0, 0, 0.25);
+  padding: 13px 24px;
 }
 .button-secondary{
   width: 142px;
