--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import './base/global.css';
 @import './base/typography.css';
 
-@import './components/button.css'
+@import './layout/header.css';
+@import './components/button.css';
