Add Hola Section Complete

--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -1,4 +1,10 @@
+
+
 .principal{
   width: 1366px;
   background: linear-gradient(135deg, #FAD7A1 0%, #E96D71 100%);
+}
+* {
+  padding: 0;
+  margin: 0;
 }
