--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -36,3 +36,11 @@ h5{
   font-size: 24px;
   line-height: 39px;
 }
+.body1{
+  font-family: 'Oxygen', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.005em;
+}
