--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,8 @@
 @import './base/typography.css';
 
 @import './layout/header.css';
-@import './layout/hola.css';
+@import './layout/section-hola.css';
+@import './layout/section-proyectos.css';
 @import './components/button.css';
 @import './components//icon.css';
+@import './components/hero.css'
