--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -12,24 +12,22 @@ button{
 }
 .button{
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
   align-items: center;
-  padding: 0px;
+  padding: 13px 24px;
   border-radius: 90px;
   box-sizing: border-box;
   border: 2px solid #0F0A0A;
+  height: 49px;
   
 }
 
 .button-primary{
-  height: 49px;
   background-color: #42E2B8;
   box-shadow: -4px 4px 14px rgba(0, 0, 0, 0.25);
-  padding: 13px 24px;
 }
 .button-secondary{
-  width: 142px;
-  height: 49px;
   filter: drop-shadow(-4px 4px 14px rgba(0, 0, 0, 0.25));
 }
