--- a/src/css/base/typography.css
+++ b/src/css/base/typography.css
@@ -35,6 +35,7 @@ h5{
   font-weight: bold;
   font-size: 24px;
   line-height: 39px;
+  opacity: 0.5;
 }
 .body1{
   font-family: 'Oxygen', sans-serif;
