--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -1,7 +1,7 @@
 .hero{
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 0px 128px;
 }
 .hero--data{
   display: flex;
