--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,5 +7,6 @@
 @import './components/button.css';
 @import './components//icon.css';
 @import './components/hero.css';
+@import './components/recommendation.css';
 
 @import './helpers/helpers.css'
