--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,8 @@
 @import './layout/section-hola.css';
 @import './layout/section-proyectos.css';
 @import './layout/section-hablemos.css';
+@import './layout/footer.css';
+
 @import './components/button.css';
 @import './components//icon.css';
 @import './components/hero.css';
