--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -2,7 +2,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  padding: 0px 128px;;
 }
 
 .header__sections{
