--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -4,6 +4,7 @@
   max-width: 1366px;
   background: linear-gradient(135deg, #FAD7A1 0%, #E96D71 100%);
   margin: auto;
+  padding: 0px 127px;
 }
 * {
   padding: 0;
