--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -2,5 +2,12 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 128px;
+  padding: 15px 0px;
+}
+@media (max-width: 1200px){
+  footer{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
 }
