Add Views part 2

--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -31,3 +31,13 @@ button{
 .button-secondary{
   filter: drop-shadow(-4px 4px 14px rgba(0, 0, 0, 0.25));
 }
+@media (max-width: 760px){
+  .button-hidden{
+    display: none;
+  }
+  .button{
+    gap: 10px;
+    justify-content: center;
+ 
+  }
+}
