--- a/src/css/components/recommendation.css
+++ b/src/css/components/recommendation.css
@@ -8,7 +8,6 @@
 .recommendations--data{
   display: flex;
   flex-direction: column;
-  padding: 80px 70px;
   align-items: center;
   text-align: center;
   background: rgba(255, 255, 255, 0.2);
@@ -19,4 +18,17 @@
 .recommendations--data img{
   width: 80px;
   height: 80px;
+}
+@media (max-width: 760px){
+  .recommendations--data img{
+    width: 64px;
+    height: 64px;
+  }
+  .recommendations--data h4{
+    font-size: 16px;
+    line-height: 30px;
+  }
+  .recommendations--data h5{
+    font-size: 12px;
+  }
 }
