--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 10px;
+  width: 40%;
 }
 .hero__title{
   color: #42E2B8;
@@ -22,6 +23,9 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items:unset;
-    gap: 15px;
+    gap: 18px;
+  }
+  .hero--data{
+    width: 100%;
   }
 }
