--- a/src/css/components/recommendation.css
+++ b/src/css/components/recommendation.css
@@ -14,12 +14,16 @@
   border-radius: 24px;
   gap: 15px;
   border: 4px solid white;
+  padding: 10% 10%;
 }
 .recommendations--data img{
   width: 80px;
   height: 80px;
 }
 @media (max-width: 760px){
+  .recommendations--data{
+  }
+
   .recommendations--data img{
     width: 64px;
     height: 64px;
