--- a/src/css/components/recommendation.css
+++ b/src/css/components/recommendation.css
@@ -27,6 +27,7 @@
   .recommendations--data img{
     width: 64px;
     height: 64px;
+    box-sizing: content-box;
   }
   .recommendations--data h4{
     font-size: 16px;
